migrate RadiationSystem to winter